--- a/app/src/main/res/layout-port/activity_main_menu.xml
+++ b/app/src/main/res/layout-port/activity_main_menu.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
     >
 
     <Button
@@ -16,6 +14,7 @@
         android:background="@color/colorPrimary"
         android:layout_margin="10dp"
         android:textColor="@android:color/white"
+        android:tag="0"
         android:textSize="18sp"
         />
 
@@ -27,6 +26,7 @@
         android:background="@color/colorPrimary"
         android:layout_margin="10dp"
         android:textColor="@android:color/white"
+        android:tag="1"
         android:textSize="18sp"
         />
 
@@ -38,6 +38,7 @@
         android:background="@color/colorPrimary"
         android:layout_margin="10dp"
         android:textColor="@android:color/white"
+        android:tag="2"
         android:textSize="18sp"
         />
 
@@ -49,6 +50,7 @@
         android:background="@color/colorPrimary"
         android:layout_margin="10dp"
         android:textColor="@android:color/white"
+        android:tag="3"
         android:textSize="18sp"
         />
 
