--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -7,15 +7,16 @@
     <item
         android:id="@+id/star_play_market"
         android:orderInCategory="200"
+        app:showAsAction="ifRoom"
         android:title="@string/star"
-        app:showAsAction="never"
+        android:icon="@drawable/ic_star_black_24dp"
         />
 
     <item
         android:id="@+id/share_menu"
         android:orderInCategory="300"
+        app:showAsAction="ifRoom"
         android:title="@string/share"
-        app:showAsAction="never"
+        android:icon="@drawable/ic_share"
         />
-
 </menu>
